--- a/pyramid_stocks/pyramid_stocks/templates/stock-detail.jinja2
+++ b/pyramid_stocks/pyramid_stocks/templates/stock-detail.jinja2
@@ -1,37 +1,6 @@
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Stock Portfolio - Detail</title>
+{% extends "base.jinja2" %}
 
-  <link rel="icon" type="image/png" href=""/>
-  <!-- Style sheets-->
-  <link href="https://fonts.googleapis.com/css?family=Kaushan+Script|Molle:400i" rel="stylesheet">
-  <link rel="stylesheet" href="styles/normalize.css">
-  <link rel="stylesheet" href="styles/base.css">
-  <link rel="stylesheet" href="styles/layout.css">
-  <link rel="stylesheet" href="styles/modules.css">
-
-  <!-- HANDLEBARS SECTION-->
-
-</head>
-
-<body>
-  <div id="body-background">
-  <header>
-    <h1>Stock Details</h1>
-    <nav class="navigation">
-            <a class="nav-links" href="/">Portfolio</a>
-      </nav>
-  </header>
-
-  <main>
-      <section class="">
-      </section>
-  </main>
-
-  <footer>
-  </footer>
-  </div>
-</body>
-</html>
+{% block content %}
+<h1>Stock Details</h1>
+<p>You're viewing a detail page for a single stock!</p>
+{% endblock content %}
