--- a/pyramid_stocks/pyramid_stocks/templates/index.jinja2
+++ b/pyramid_stocks/pyramid_stocks/templates/index.jinja2
@@ -4,10 +4,10 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <link rel="stylesheet" href="{{request.static_url('learning_journal:static/normalize.css')}}">
-  <link rel="stylesheet" href="{{request.static_url('learning_journal:static/base.css')}}">
-  <link rel="stylesheet" href="{{request.static_url('learning_journal:static/layout.css')}}">
-  <link rel="stylesheet" href="{{request.static_url('learning_journal:static/modules.css')}}">
+  <link rel="stylesheet" href="{{request.static_url('pyramid_stocks:static/normalize.css')}}">
+  <link rel="stylesheet" href="{{request.static_url('pyramid_stocks:static/base.css')}}">
+  <link rel="stylesheet" href="{{request.static_url('pyramid_stocks:static/layout.css')}}">
+  <link rel="stylesheet" href="{{request.static_url('pyramid_stocks:static/modules.css')}}">
   <!-- <link rel="stylesheet" href="../static/skeleton.css"> -->
   <title>Document</title>
 </head>
@@ -18,7 +18,7 @@
         <li><a href="/">Home</a></li>
         <li><a href="/auth">Login/Register</a></li>
         <li><a href="/portfolio">Portfolio</a></li>
-        <li><a href="/new">Stocks</a></li>
+        <li><a href="/stock">Stocks</a></li>
       </ul>
     </nav>
   </header>
