--- a/pyramid_stocks/pyramid_stocks/templates/portfolio.jinja2
+++ b/pyramid_stocks/pyramid_stocks/templates/portfolio.jinja2
@@ -7,8 +7,8 @@
   {% for entry in entries %}
   <li>
     <h3>{{entry.companyName}}</h3>
-    <p>({{entry.website}})</p>
-    <p>'CEO: ' + {{entry.CEO}}</p>
+    <p>{{entry.website}}</p>
+    <p>CEO: {{entry.CEO}}</p>
     <p><a href="{{request.route_url('portfolio', symbol=entry.symbol)}}">View more</a></p>
   </li>
   {% endfor %}
