--- a/pyramid_stocks/pyramid_stocks/templates/stock-detail.jinja2
+++ b/pyramid_stocks/pyramid_stocks/templates/stock-detail.jinja2
@@ -3,4 +3,12 @@
 {% block content %}
 <h1>Stock Details</h1>
 <p>You're viewing a detail page for a single stock!</p>
+
+{% if company %}
+<div>
+    {{company}}
+</div>
+
 {% endblock content %}
+
+<-- need a button using MOCK_DATA.append() -->
