--- a/pyramid_stocks/pyramid_stocks/templates/stock-detail.jinja2
+++ b/pyramid_stocks/pyramid_stocks/templates/stock-detail.jinja2
@@ -1,8 +1,10 @@
 {% extends "index.jinja2" %}
 
 {% block content %}
-<h1>Stock Details</h1>
-<p>You're viewing a detail page for a single stock!</p>
+<form action="{{request.route_url('stock')}}" method="GET">
+  <input type="text" name="symbol" placeholder="Enter ticker">
+  <button type="submit">Search</button>
+</form>
 
 {% if company %}
 <div>
