stocks are being added to portfolio, need to add more tests

--- a/pyramid_stocks/pyramid_stocks/templates/stock-add.jinja2
+++ b/pyramid_stocks/pyramid_stocks/templates/stock-add.jinja2
@@ -35,3 +35,7 @@
   </div>
 </body>
 </html>
+
+<form action="{{request.route_url('stock')}}" method="POST">
+  <button type="submit">Add to Portfolio</button>
+</form>
