templates set up, moving on

--- a/pyramid_stocks/pyramid_stocks/templates/index.jinja2
+++ b/pyramid_stocks/pyramid_stocks/templates/index.jinja2
@@ -26,11 +26,11 @@
     </nav>
   </header>
   <main>
-    <h1>Jeremy's Portfolio</h1>
+    <h1>Jeremy'$ Portfolio</h1>
     <p>Making paper since 2009</p>
 
     {% block content %}
-    <p>No content</p>
+    <p></p>
     {% endblock content %}
 
   </main>
