--- a/pyramid_stocks/pyramid_stocks/templates/portfolio.jinja2
+++ b/pyramid_stocks/pyramid_stocks/templates/portfolio.jinja2
@@ -4,7 +4,7 @@
 <h1>Welcome to my Portfolio</h1>
 
 <ul>
-  {% for entry in entries %}
+  {% for stock in stocks %}
   <li>
     <h3>{{entry.companyName}}</h3>
     <p>{{entry.website}}</p>
