--- a/pyramid_stocks/pyramid_stocks/templates/stock-detail.jinja2
+++ b/pyramid_stocks/pyramid_stocks/templates/stock-detail.jinja2
@@ -6,21 +6,21 @@
   <button type="submit">Search</button>
 </form>
 
-{% if company %}
-<div>
-  <h1>{{company.companyName}}</h1>
-  <p>Symbol: {{company.symbol}}</p>
-  <p>{{company.website}}</p>
-  <p>CEO: {{company.CEO}}</p>
-  <p>Industry:{{company.industry}}</p>
-  <p>Sector:{{company.sector}}</p>
-  <p>Securities:{{company.issueType}}</p>
-  <p>Summary:{{company.description}}</p>
-</div>
-<form id='hidden'action="{{request.route_url('portfolio')}}" method="POST">
-  <input type="hidden" name="symbol" value="{{company.symbol}}">
-  <button type="submit">Add to Portfolio</button>
+<form class="newStock" action="{{request.route_url('stock')}}" method="POST">
+    <input type="hidden" name="csrf_token" value="{{request.session.get_csrf_token()}}">
+    {% if company %}
+  <div class="company">
+    <h1>{{company.companyName}}</h1>
+    <p>Symbol: {{company.symbol}}</p>
+    <p>{{company.website}}</p>
+    <p>CEO: {{company.CEO}}</p>
+    <p>Industry:{{company.industry}}</p>
+    <p>Sector:{{company.sector}}</p>
+    <p>Securities:{{company.issueType}}</p>
+    <p>Summary:{{company.description}}</p>
+  </div>
+  <button name="symbol" type="submit" value="{{company.symbol}}">Add to Portfolio</button>
 </form>
-{% endif %}
+  {% endif %}
 
 {% endblock content %}
