--- a/pyramid_stocks/pyramid_stocks/templates/portfolio-detail.jinja2
+++ b/pyramid_stocks/pyramid_stocks/templates/portfolio-detail.jinja2
@@ -1,6 +1,6 @@
 from default import 
 
-{% extends "index.jinja2" %}
+{% extends "base.jinja2" %}
 
 {% block content %}
 <div id="portfolio-detail">
