--- a/pyramid_stocks/pyramid_stocks/templates/stock-detail.jinja2
+++ b/pyramid_stocks/pyramid_stocks/templates/stock-detail.jinja2
@@ -1,4 +1,4 @@
-{% extends "index.jinja2" %}
+{% extends "base.jinja2" %}
 
 {% block content %}
 <form action="{{request.route_url('stock')}}" method="GET">
